--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -1,3 +1,5 @@
+@use "../utilities/responsive";
+
 @forward "home";
 @forward "page";
 @forward "single";
@@ -11,6 +13,10 @@
   background: var(--color-light);
   display: grid;
   grid-template-columns: 15rem 1fr;
+
+  @include responsive.max(680px) {
+    grid-template-columns: 5rem 1fr;
+  }
 }
 
 .main {
