--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -31,6 +31,19 @@
     margin-bottom: 6rem;
   }
 
+  &__box-subheader {
+    margin-top: 2rem;
+    margin-bottom: -0.5rem;
+  }
+
+  &__box-text {
+    opacity: 50%;
+
+    @include responsive.max(1100px) {
+      font-size: 0.6rem !important;
+    }
+  }
+
   &__box-container {
     gap: 2rem;
 
@@ -55,7 +68,7 @@
       }
 
       p {
-        margin-bottom: 0;
+        margin-bottom: 0rem;
         font-size: 13px;
       }
 
@@ -85,12 +98,29 @@
     .sammanfattning-enheter,
     .sammanfattning-geo {
       grid-column: span 8;
+
+      .main__box-text {
+        padding-top: 0.2rem;
+      }
+    }
+
+    .sammanfattning-enheter {
+      .main__box-text {
+        padding-top: 2.4rem;
+      }
+    }
+
+    .sammanfattning-geo {
+      .main__box-text {
+        padding-top: 0.2rem;
+      }
     }
 
     // Enheter
     .enheter__container {
       display: flex;
       gap: 8rem;
+      align-items: center;
     }
     .dator,
     .mobil {
@@ -143,7 +173,7 @@
     display: inline-block;
     width: 36px;
     height: 36px;
-    margin-left: 8px;
+    margin-left: 3rem;
     position: absolute;
     bottom: 8px;
     background-image: url("/assets/icons/trend-up.svg");
@@ -154,21 +184,48 @@
     @include responsive.max(500px) {
       width: 36px;
       height: 36px;
-      margin-left: 8px;
+      margin-left: 3rem;
       position: absolute;
       bottom: 10px;
     }
   }
 }
 
+.sammanfattning,
+.sammanfattning-trender {
+  .main__box-content {
+    padding: 0 0 2rem 0;
+    margin: 0 auto;
+  }
+
+  @include responsive.max(1200px) {
+    .main__box-content {
+      font-size: 1rem !important;
+    }
+  }
+
+  @include responsive.max(900px) {
+    .main__box-content {
+      font-size: var(--font-size-3) !important;
+    }
+  }
+}
+
 //Dator
 
+// .sammanfattning-dator,
+// .sammanfattning-mobil {
+//   .main__box-text {
+//     margin-bottom: -12rem !important;
+//   }
+// }
 .sammanfattning-dator {
   position: relative;
   margin-left: 4.5rem;
   border-right: 1px solid #fcfcfc54;
 
   margin-top: 1rem;
+
   padding-right: 6rem;
 
   color: var(--color-complementary);
@@ -245,7 +302,7 @@
   }
 
   @include responsive.max(500px) {
-    padding-right: 3.5rem !important;
+    padding-right: 1.2rem !important;
     margin-left: 0rem !important;
     font-size: var(--font-size-2) !important;
 
@@ -259,9 +316,7 @@
 
 .sammanfattning-mobil {
   position: relative;
-
   margin-top: 1rem;
-
   color: var(--color-primary) !important;
   font-size: var(--font-size-3);
   font-weight: 600;
